Fix/hero list spacing (#98)
* Reduce list item spacing

* Bring back bullets

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -36,19 +36,12 @@
         }
 
         ul {
-            margin-left: 0;
-            list-style: none;
-
-            @include resp-min($screen-md-min) {
-                margin-top: ($line-height * 2.5);
+            @include resp-min($screen-sm-min) {
+                margin-top: ($line-height * 1.5);
             }
 
             > li:not(:last-child) {
                 margin-bottom: $line-height;
-
-                @include resp-min($screen-md-min) {
-                    margin-bottom: ($line-height * 2);
-                }
             }
         }
     }
